// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Link /> component > should render the component in default state 1`] = `
<a
  class="makeStyles-CustomRouterLink e2ct7p50"
  href="/"
>
  <p
    class="MuiTypography-root MuiTypography-body1 makeStyles-MuiTypography-root"
  />
</a>
`;

exports[`<Link /> component > should render the component with link 1`] = `
<a
  class="makeStyles-CustomRouterLink e2ct7p50"
  href="/"
>
  <p
    class="MuiTypography-root MuiTypography-body1 makeStyles-MuiTypography-root"
  >
    Home
  </p>
</a>
`;
